--- a/ArduinoPWS/month.html.tmpl
+++ b/ArduinoPWS/month.html.tmpl
@@ -101,8 +101,8 @@
                         <tr><td>Low Humidity</td><td>$month.outHumidity.min</td><td>$month.outHumidity.mintime</td></tr>
                         <tr><td>High Barometer</td><td>$month.barometer.max</td><td>$month.barometer.maxtime</td></tr>
                         <tr><td>Low Barometer</td><td>$month.barometer.min</td><td>$month.barometer.mintime</td></tr>
-                        <tr><td>Rain Total</td><td>$month.rainHour.sum</td><td></td></tr>
-                        <tr><td>High Rain Rate</td><td>$month.rainHour.max</td><td>$month.rainHour.maxtime</td></tr>
+                        <tr><td>Rain Total</td><td>$month.rain.sum</td><td></td></tr>
+                        <tr><td>High Rain Rate</td><td>$month.rain.max</td><td>$month.rain.maxtime</td></tr>
                         <tr><td>High Wind Speed</td><td>$month.wind.max $month.wind.gustdir</td><td>$month.wind.maxtime</td></tr>
                         <tr><td>Average Wind</td><td>$month.wind.avg</td><td></td></tr>
                         <tr><td>RMS Wind</td><td>$month.wind.rms</td><td></td></tr>
@@ -144,8 +144,8 @@
                         <tr><td>Low Humidity</td><td>$year.outHumidity.min</td><td>$year.outHumidity.mintime</td></tr>
                         <tr><td>High Barometer</td><td>$year.barometer.max</td><td>$year.barometer.maxtime</td></tr>
                         <tr><td>Low Barometer</td><td>$year.barometer.min</td><td>$year.barometer.mintime</td></tr>
-                        <tr><td>Rain Total</td><td>$year.rainHour.sum</td><td></td></tr>
-                        <tr><td>High Rain Rate</td><td>$year.rainHour.max</td><td>$year.rainHour.maxtime</td></tr>
+                        <tr><td>Rain Total</td><td>$year.rain.sum</td><td></td></tr>
+                        <tr><td>High Rain Rate</td><td>$year.rain.max</td><td>$year.rain.maxtime</td></tr>
                         <tr><td>High Wind Speed</td><td>$year.wind.max $year.wind.gustdir</td><td>$year.wind.maxtime</td></tr>
                         <tr><td>Average Wind</td><td>$year.wind.avg</td><td></td></tr>
                         <tr><td>RMS Wind</td><td>$year.wind.rms</td><td></td></tr>
