--- a/ArduinoPWS/year.html.tmpl
+++ b/ArduinoPWS/year.html.tmpl
@@ -132,8 +132,8 @@
                 <div class="card" >
                     <h1><i class="fa fa-cloud m-blau" ></i> Rain This Year (from 1-$station.rain_year_str)</h1>
                     <table class="tablespacer">
-                        <tr><td>Total Rain</td><td>$rainyear.rainHour.sum</td><td></td></tr>
-                        <tr><td>High Rain Rate</td><td>$rainyear.rainHour.max</td><td>$rainyear.rainHour.maxtime</td></tr>
+                        <tr><td>Total Rain</td><td>$rainyear.rain.sum</td><td></td></tr>
+                        <tr><td>High Rain Rate</td><td>$rainyear.rain.max</td><td>$rainyear.rain.maxtime</td></tr>
                     </table>
                 </div>
 
